--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 -i https://pypi.python.org/simple
-asgiref==3.6.0 ; python_version >= '3.7'
-boto3==1.26.125
-botocore==1.29.125 ; python_version >= '3.7'
+annotated-types==0.5.0 ; python_version >= '3.7'
+asgiref==3.7.2 ; python_version >= '3.7'
+boto3==1.28.1
+botocore==1.31.1 ; python_version >= '3.7'
 defusedxml==0.7.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20230430 ; python_version >= '3.7'
 dj-database-url==2.0.0
-django==4.2
+django==4.2.3
 django-appconf==1.0.5 ; python_version >= '3.1'
-django-axes==5.41.1
+django-axes==6.0.5
 django-dbsettings==1.3.0
 django-filter==23.2
 django-imagekit==4.1.0
 django-import-export==3.2.0
-django-ipware==5.0.0 ; python_version >= '3.7'
 django-qr-code==3.1.1
 django-storages==1.13.2
-django-taggit==3.1.0
+django-taggit==4.0.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
 et-xmlfile==1.1.0 ; python_version >= '3.6'
-faker==18.6.1
+faker==18.13.0
 gunicorn==20.1.0
 jmespath==1.0.1 ; python_version >= '3.7'
 markuppy==1.14
@@ -27,24 +27,25 @@ odfpy==1.4.1
 openpyxl==3.1.2
 packaging==23.1 ; python_version >= '3.7'
 pilkit==2.0
-pillow==9.5.0
-plotly==5.14.1
+pillow==10.0.0
+plotly==5.15.0
 psycopg2-binary==2.9.6
-pydantic==1.10.7 ; python_version >= '3.7'
+pydantic==2.0.2 ; python_version >= '3.7'
+pydantic-core==2.1.2 ; python_version >= '3.7'
 python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.0
 pytz==2023.3
 pyyaml==6.0
-s3transfer==0.6.0 ; python_version >= '3.7'
+s3transfer==0.6.1 ; python_version >= '3.7'
 segno==1.5.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-setuptools==67.7.2 ; python_version >= '3.7'
+setuptools==68.0.0 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.4 ; python_version >= '3.5'
-tablib[html,ods,xls,xlsx,yaml]==3.4.0 ; python_version >= '3.7'
+tablib[html,ods,xls,xlsx,yaml]==3.5.0 ; python_version >= '3.8'
 tenacity==8.2.2 ; python_version >= '3.6'
-typing-extensions==4.5.0 ; python_version >= '3.7'
+typing-extensions==4.7.1 ; python_version >= '3.7'
 uritemplate==4.1.1
-urllib3==1.26.15 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-whitenoise==6.4.0
+urllib3==1.26.16 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+whitenoise==6.5.0
 xlrd==2.0.1
 xlwt==1.3.0
