--- a/devenv.yaml
+++ b/devenv.yaml
@@ -8,3 +8,5 @@ inputs:
         follows: nixpkgs
   mk-shell-bin:
     url: github:rrbutani/nix-mk-shell-bin
+  devenv:
+    url: github:cachix/devenv/python-rewrite
