--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ django-widget-tweaks = "*"
 djangorestframework = "*"
 faker = "*"
 gunicorn = "*"
-pillow = "===9.5.0"
+pillow = "*"
 plotly = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
