--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 -i https://pypi.python.org/simple
-annotated-types==0.5.0 ; python_version >= '3.7'
+annotated-types==0.6.0 ; python_version >= '3.8'
 asgiref==3.7.2 ; python_version >= '3.7'
-boto3==1.28.55
-botocore==1.31.55 ; python_version >= '3.7'
+boto3==1.28.62
+botocore==1.31.62 ; python_version >= '3.7'
 defusedxml==0.7.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20230430 ; python_version >= '3.7'
 dj-database-url==2.1.0
-django==4.2.5
-django-appconf==1.0.5 ; python_version >= '3.1'
+django==4.2.6
+django-appconf==1.0.5 ; python_version >= '3.6'
 django-axes==6.1.1
 django-dbsettings==1.3.0
 django-filter==23.3
-django-imagekit==4.1.0
+django-imagekit==5.0.0
 django-import-export==3.3.1
 django-qr-code==3.1.1
-django-storages==1.14
+django-storages==1.14.1
 django-taggit==4.0.0
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
@@ -25,12 +25,12 @@ jmespath==1.0.1 ; python_version >= '3.7'
 markuppy==1.14
 odfpy==1.4.1
 openpyxl==3.1.2
-packaging==23.1 ; python_version >= '3.7'
-pilkit==2.0
-pillow===9.5.0
+packaging==23.2 ; python_version >= '3.7'
+pilkit==3.0
+pillow==10.0.1
 plotly==5.17.0
-psycopg2-binary==2.9.7
-pydantic==2.4.1 ; python_version >= '3.7'
+psycopg2-binary==2.9.9
+pydantic==2.4.2 ; python_version >= '3.7'
 pydantic-core==2.10.1 ; python_version >= '3.7'
 python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.0
@@ -45,7 +45,7 @@ tablib[html,ods,xls,xlsx,yaml]==3.5.0 ; python_version >= '3.8'
 tenacity==8.2.3 ; python_version >= '3.7'
 typing-extensions==4.8.0 ; python_version >= '3.8'
 uritemplate==4.1.1
-urllib3==1.26.16 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+urllib3==2.0.6 ; python_version >= '3.10'
 whitenoise==6.5.0
 xlrd==2.0.1
 xlwt==1.3.0
