--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 boto3 = "*"
 dj-database-url = "*"
-django = "*"
+django = "~=4.0"
 django-axes = "*"
 django-filter = "*"
 django-imagekit = "*"
