--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 -i https://pypi.python.org/simple
 annotated-types==0.6.0; python_version >= '3.8'
 asgiref==3.7.2; python_version >= '3.7'
-boto3==1.28.68; python_version >= '3.7'
-botocore==1.31.68; python_version >= '3.7'
+boto3==1.33.10; python_version >= '3.7'
+botocore==1.33.10; python_version >= '3.7'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20230430; python_version >= '3.7'
 dj-database-url==2.1.0
-django==4.2.6; python_version >= '3.8'
-django-appconf==1.0.5; python_version >= '3.6'
+django==4.2.8; python_version >= '3.8'
+django-appconf==1.0.6; python_version >= '3.7'
 django-axes==6.1.1; python_version >= '3.7'
 django-dbsettings==1.3.0
-django-filter==23.3; python_version >= '3.7'
+django-filter==23.5; python_version >= '3.7'
 django-imagekit==5.0.0
-django-import-export==3.3.1; python_version >= '3.8'
+django-import-export==3.3.3; python_version >= '3.8'
 django-qr-code==3.1.1; python_version >= '3.7'
 django-storages==1.14.2; python_version >= '3.7'
-django-taggit==4.0.0; python_version >= '3.6'
+django-taggit==5.0.1; python_version >= '3.8'
 django-widget-tweaks==1.5.0; python_version >= '3.8'
 djangorestframework==3.14.0; python_version >= '3.6'
 et-xmlfile==1.1.0; python_version >= '3.6'
-faker==19.11.0; python_version >= '3.8'
+faker==20.1.0; python_version >= '3.8'
 gunicorn==21.2.0; python_version >= '3.5'
 jmespath==1.0.1; python_version >= '3.7'
 markuppy==1.14
@@ -28,18 +28,18 @@ openpyxl==3.1.2
 packaging==23.2; python_version >= '3.7'
 pilkit==3.0
 pillow==10.1.0; python_version >= '3.8'
-plotly==5.17.0; python_version >= '3.6'
+plotly==5.18.0; python_version >= '3.6'
 psycopg2-binary==2.9.9; python_version >= '3.7'
-pydantic==2.4.2; python_version >= '3.7'
-pydantic-core==2.10.1; python_version >= '3.7'
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+pydantic==2.5.2; python_version >= '3.7'
+pydantic-core==2.14.5; python_version >= '3.7'
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.0; python_version >= '3.8'
 pytz==2023.3.post1
 pyyaml==6.0.1; python_version >= '3.6'
-s3transfer==0.7.0; python_version >= '3.7'
-segno==1.5.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-setuptools==68.2.2; python_version >= '3.8'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+s3transfer==0.8.2; python_version >= '3.7'
+segno==1.6.0; python_version >= '3.5'
+setuptools==69.0.2; python_version >= '3.8'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.4; python_version >= '3.5'
 tablib[html,ods,xls,xlsx,yaml]==3.5.0; python_version >= '3.8'
 tenacity==8.2.3; python_version >= '3.7'
