--- a/Pipfile
+++ b/Pipfile
@@ -4,28 +4,55 @@ url = "https://pypi.python.org/simple"
 name = "pypi"
 
 [packages]
-boto3 = "*"
-dj-database-url = "*"
-django = "~=4.0"
-django-axes = "*"
-django-filter = "*"
-django-imagekit = "*"
-django-import-export = "*"
-django-storages = "*"
-django-widget-tweaks = "*"
-djangorestframework = "*"
-faker = "*"
-gunicorn = "*"
-pillow = "*"
-plotly = "*"
-psycopg2-binary = "*"
-python-dotenv = "*"
-pyyaml = "*"
-uritemplate = "*"
-whitenoise = "*"
-django-taggit = "*"
-django-qr-code = "*"
-django-dbsettings = "*"
+boto3 = "==1.33.10"
+dj-database-url = "==2.1.0"
+django = "==4.2.8"
+django-axes = "==6.1.1"
+django-filter = "==23.5"
+django-imagekit = "==5.0.0"
+django-import-export = "==3.3.3"
+django-storages = "==1.14.2"
+django-widget-tweaks = "==1.5.0"
+djangorestframework = "==3.14.0"
+faker = "==20.1.0"
+gunicorn = "==21.2.0"
+pillow = "==10.1.0"
+plotly = "==5.18.0"
+psycopg2-binary = "==2.9.9"
+python-dotenv = "==1.0.0"
+pyyaml = "==6.0.1"
+uritemplate = "==4.1.1"
+whitenoise = "==6.6.0"
+django-taggit = "==5.0.1"
+django-qr-code = "==3.1.1"
+django-dbsettings = "==1.3.0"
+annotated-types = "==0.6.0"
+asgiref = "==3.7.2"
+botocore = "==1.33.10"
+defusedxml = "==0.7.1"
+diff-match-patch = "==20230430"
+django-appconf = "==1.0.6"
+et-xmlfile = "==1.1.0"
+jmespath = "==1.0.1"
+markuppy = "==1.14"
+odfpy = "==1.4.1"
+openpyxl = "==3.1.2"
+packaging = "==23.2"
+pilkit = "==3.0"
+pydantic = "==2.5.2"
+pydantic-core = "==2.14.5"
+python-dateutil = "==2.8.2"
+pytz = "==2023.3.post1"
+s3transfer = "==0.8.2"
+segno = "==1.6.0"
+six = "==1.16.0"
+sqlparse = "==0.4.4"
+tablib = {extras = ["yaml", "ods", "html", "xlsx", "xls"], version = "==3.5.0"}
+tenacity = "==8.2.3"
+typing-extensions = "==4.8.0"
+urllib3 = "==2.0.7"
+xlrd = "==2.0.1"
+xlwt = "==1.3.0"
 
 [dev-packages]
 coveralls = "*"
