--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "masonry-layout": "^4.2.2",
     "npm-force-resolutions": "^0.0.10",
     "plotly.js": "^2.28.0",
+    "prettier": "3.2.5",
     "pulltorefreshjs": "^0.1.22",
     "pump": "^3.0.0",
     "sass": "^1.70.0",
