--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,16 +1,10 @@
 {
   "extends": "stylelint-config-recommended-scss",
-  "plugins": [
-    "stylelint-order",
-    "stylelint-scss"
-  ],
+  "plugins": ["stylelint-order", "stylelint-scss"],
   "rules": {
     "at-rule-no-vendor-prefix": true,
     "media-feature-name-no-vendor-prefix": true,
-    "order/order": [
-        "declarations",
-        "rules"
-    ],
+    "order/order": ["declarations", "rules"],
     "property-no-vendor-prefix": true,
     "selector-no-vendor-prefix": true,
     "value-no-vendor-prefix": true
