--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "babybuddy",
+  "type": "module",
   "version": "",
   "license": "BSD-2-Clause",
   "repository": {
@@ -8,8 +9,7 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.8",
-    "@ronilaukkarinen/gulp-stylelint": "^14.1.2",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-all": "^1.1.0",
@@ -22,18 +22,19 @@
     "gulp-sass": "^5.1.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-spawn": "^2.0.0",
+    "gulp-stylelint-esm": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.7.1",
     "masonry-layout": "^4.2.2",
     "npm-force-resolutions": "^0.0.10",
-    "plotly.js": "^2.28.0",
+    "plotly.js": "^2.30.0",
     "prettier": "3.2.5",
     "pulltorefreshjs": "^0.1.22",
     "pump": "^3.0.0",
-    "sass": "^1.70.0",
-    "stylelint": "^15.11.0",
-    "stylelint-config-recommended-scss": "^13.0.0",
-    "stylelint-order": "^6.0.3",
-    "stylelint-scss": "^5.2.1"
+    "sass": "^1.72.0",
+    "stylelint": "^16.2.1",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-scss": "^6.2.1"
   }
 }
