--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,49 @@
 -i https://pypi.python.org/simple
 annotated-types==0.6.0; python_version >= '3.8'
-asgiref==3.7.2; python_version >= '3.7'
-boto3==1.34.14; python_version >= '3.8'
-botocore==1.34.14; python_version >= '3.8'
+asgiref==3.8.1; python_version >= '3.8'
+boto3==1.34.72; python_version >= '3.8'
+botocore==1.34.72; python_version >= '3.8'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 diff-match-patch==20230430; python_version >= '3.7'
 dj-database-url==2.1.0
-django==5.0.1; python_version >= '3.10'
+django==5.0.3; python_version >= '3.10'
 django-appconf==1.0.6; python_version >= '3.7'
-django-axes==6.3.0; python_version >= '3.7'
+django-axes==6.4.0; python_version >= '3.7'
 django-dbsettings==1.3.0
-django-filter==23.5; python_version >= '3.7'
+django-filter==24.2; python_version >= '3.8'
 django-imagekit==5.0.0
-django-import-export==3.3.5; python_version >= '3.8'
-django-qr-code==4.0.0; python_version >= '3.7'
+django-import-export==3.3.7; python_version >= '3.8'
+django-qr-code==4.0.1; python_version >= '3.8'
 django-storages==1.14.2; python_version >= '3.7'
 django-taggit==5.0.1; python_version >= '3.8'
 django-widget-tweaks==1.5.0; python_version >= '3.8'
-djangorestframework==3.14.0; python_version >= '3.6'
+djangorestframework==3.15.1; python_version >= '3.6'
 et-xmlfile==1.1.0; python_version >= '3.6'
-faker==22.0.0; python_version >= '3.8'
+faker==24.4.0; python_version >= '3.8'
 gunicorn==21.2.0; python_version >= '3.5'
 jmespath==1.0.1; python_version >= '3.7'
 markuppy==1.14
 odfpy==1.4.1
 openpyxl==3.1.2
-packaging==23.2; python_version >= '3.7'
+packaging==24.0; python_version >= '3.7'
 pilkit==3.0
 pillow==10.2.0; python_version >= '3.8'
-plotly==5.18.0; python_version >= '3.6'
+plotly==5.20.0; python_version >= '3.8'
 psycopg2-binary==2.9.9; python_version >= '3.7'
-pydantic==2.5.3; python_version >= '3.7'
-pydantic-core==2.14.6; python_version >= '3.7'
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==1.0.0; python_version >= '3.8'
-pytz==2023.3.post1
+pydantic==2.6.4; python_version >= '3.8'
+pydantic-core==2.16.3; python_version >= '3.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dotenv==1.0.1; python_version >= '3.8'
 pyyaml==6.0.1; python_version >= '3.6'
-s3transfer==0.10.0; python_version >= '3.8'
-segno==1.6.0; python_version >= '3.5'
-setuptools==69.0.3; python_version >= '3.8'
+s3transfer==0.10.1; python_version >= '3.8'
+segno==1.6.1; python_version >= '3.5'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.4; python_version >= '3.5'
 tablib[html,ods,xls,xlsx,yaml]==3.5.0; python_version >= '3.8'
 tenacity==8.2.3; python_version >= '3.7'
-typing-extensions==4.9.0; python_version >= '3.8'
+typing-extensions==4.10.0; python_version >= '3.8'
 uritemplate==4.1.1; python_version >= '3.6'
-urllib3==2.0.7; python_version >= '3.10'
+urllib3==2.2.1; python_version >= '3.10'
 whitenoise==6.6.0; python_version >= '3.8'
 xlrd==2.0.1
 xlwt==1.3.0
